--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,5 +6,6 @@ Version: 1.0
 @import "abstracts/abstracts";
 @import "vendors/vendors";
 @import "base/base";
+@import "pages/pages";
 
 @import "utilities/utilities";
