--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ select {
 body {
   font-family: helvetica, arial, sans-serif;
   font-weight: 400;
+  color: #DEDEDE;
 }
 
 h1, h2, h3 {
@@ -92,6 +93,11 @@ img {
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+/*HOME============================*/
+body {
+  background-color: #0A0A0A;
 }
 
 /*ACCESSIBILITY==================*/
