--- a/sass/abstracts/variables/_typography.scss
+++ b/sass/abstracts/variables/_typography.scss
@@ -1,6 +1,14 @@
-$font-headings: helvetica, arial, sans-serif;
-$font-body: helvetica, arial, sans-serif;
+$font-headings: "Gilroy-ExtraBold", arial, sans-serif;
+$font-body: 'Titillium Web', sans-serif;
 
 $fw-bold: 700;
 $fw-regular: 400;
 $fw-light: 200;
+
+$fs-h-l: 4rem;
+$fs-h-m: 3rem;
+$fs-h-s: 2.5rem;
+$fs-b-l: 1.5rem;
+$fs-b-m: 1.25rem;
+$fs-b-s: 1rem;
+$fs-pb-s: 0.7rem;
