--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@ Version: 1.0
 @import "abstracts/abstracts";
 @import "vendors/vendors";
 @import "base/base";
+@import "layouts/layouts";
+@import "illustrations/illustrations";
 @import "pages/pages";
 
 @import "utilities/utilities";
