--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 Author: Pablo Montoya Varela
 Version: 1.0
 */
+/*IMPORTED FONTS==================*/
+@font-face {
+  font-family: "Gilroy-ExtraBold";
+  src: url("../../assets/fonts/Gilroy-ExtraBold.otf") format("otf");
+}
 /*RESET===========================*/
 /* Box sizing rules */
 *,
@@ -78,14 +83,25 @@ select {
 }
 /*TYPOGRAPHY===========================*/
 body {
-  font-family: helvetica, arial, sans-serif;
+  font-family: "Titillium Web", sans-serif;
   font-weight: 400;
   color: #DEDEDE;
 }
 
 h1, h2, h3 {
-  font-family: helvetica, arial, sans-serif;
+  font-family: "Gilroy-ExtraBold", arial, sans-serif;
   font-weight: 700;
+}
+
+h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
+}
+
+/*SECTIONS===========================*/
+section {
+  height: 100vh;
+  max-width: 40vw;
 }
 
 /*MEDIA===========================*/
@@ -93,11 +109,242 @@ img {
   max-width: 100%;
   height: auto;
   display: block;
+  pointer-events: none;
+}
+
+/*LINKS========================*/
+a {
+  color: unset;
+  text-decoration: none;
+}
+
+/*LISTS========================*/
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+ul li {
+  font-size: 1rem;
+  transition: all 400ms ease-in-out;
+  opacity: 0.5;
+}
+ul li:hover {
+  color: #EC5663;
+  opacity: 1;
+}
+
+/*FOLLOWER========================*/
+.follower {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  z-index: 9;
+  border: 1px solid #fff;
+  background-color: transparent;
+  border-radius: 50%;
+  opacity: 0.75;
+}
+
+body:has(.starship-system:hover) .follower {
+  scale: 1.5;
+  background-color: #0A0A0A;
+}
+
+/*MASKS===========================*/
+/*ELEMENT===========================*/
+.element {
+  width: 35px;
+  height: 35px;
+  background-color: #0A0A0A;
+  border-radius: 100%;
+  border: 1px dashed #DEDEDE;
+  transition: all 400ms cubic-bezier(0.47, 1.64, 0.41, 0.8);
+}
+.element:hover {
+  scale: 1.2;
+  rotate: 45deg;
+}
+
+/*NAV========================*/
+nav.navigation-bar {
+  display: flex;
+  width: 100%;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
+  position: sticky;
+  top: 0;
+}
+nav.navigation-bar li {
+  display: flex;
+  align-items: flex-end;
+  justify-content: end;
+}
+
+html, body {
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: #0a0a0a;
+  color: #fff;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  overflow-x: hidden;
+  scrollbar-color: transparent;
+  position: relative;
+}
+
+.progress-bar-container {
+  position: fixed;
+  width: 100%;
+  padding: 0 4rem;
+  bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row nowrap;
+  background-color: #0A0A0A;
+}
+.progress-bar-container .altitude-container, .progress-bar-container .stage-container, .progress-bar-container .progress-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.progress-bar-container .altitude-container .altitude .altitude-value {
+  font-weight: 700;
+}
+.progress-bar-container .stage-inner {
+  display: flex;
+  gap: 1rem;
+}
+.progress-bar-container .stage-container {
+  gap: 2rem;
+}
+.progress-bar-container .stage-container .stage-title {
+  font-weight: 700;
+}
+.progress-bar-container .stage-container .progress {
+  width: 10vw;
+  height: 4px;
+  border-radius: 4px;
+  background-color: #DEDEDE;
+}
+.progress-bar-container .stage-container .progress .progress-inner {
+  height: 4px;
+  width: 0px;
+  border-radius: 4px;
+  background-color: #EC5663;
+}
+.progress-bar-container .stage-container .stages-list {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 1rem;
+}
+.progress-bar-container .stage-container .stages-list li {
+  font-size: 0.7rem;
+}
+
+/*STARSHIP =======================*/
+.starship-system {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.starship-container, .booster-container {
+  width: 65px;
+  overflow: hidden;
+}
+.starship-container img, .booster-container img {
+  max-width: unset;
+}
+
+.starship-container {
+  height: 195px;
+}
+
+.booster-container {
+  height: 255px;
+  top: 95%;
+}
+
+.rotating {
+  animation: rotation 950ms steps(4) infinite;
+}
+
+@keyframes rotation {
+  from {
+    transform: translate3d(0px, 0, 0);
+  }
+  to {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+@keyframes translation {
+  from {
+    transform: translateY(0rem);
+  }
+  to {
+    transform: translateY(-30rem);
+  }
+}
+.birds-section {
+  position: relative;
+  width: 100%;
+}
+
+.bird {
+  width: 10px;
+  height: 10px;
+  background-color: #EC5663;
+  position: absolute;
+  transition: all 400ms cubic-bezier(0.47, 1.64, 0.41, 0.8);
+}
+.bird:hover {
+  border-radius: 100%;
+}
+
+.bird:nth-of-type(1) {
+  left: 0rem;
+  top: 5rem;
+}
+
+.bird:nth-of-type(2) {
+  left: 10rem;
+  top: 10rem;
+}
+
+.bird:nth-of-type(3) {
+  left: 20rem;
 }
 
 /*HOME============================*/
 body {
   background-color: #0A0A0A;
+}
+
+body:has(.starship-system:hover) .quote {
+  opacity: 1;
+}
+
+.quote {
+  opacity: 0;
+  transition: all 500ms ease-in-out;
+}
+
+/*LIFT OF SECTION=================*/
+.lift-off-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /*ACCESSIBILITY==================*/
