--- a/sass/illustrations/_illustrations.scss
+++ b/sass/illustrations/_illustrations.scss
@@ -1,2 +1,6 @@
-@import "starship";
+@import "stars";
+@import "satellites";
+@import "planes";
+@import "clouds";
 @import "birds";
+@import "starship";
