--- a/sass/layouts/_body.scss
+++ b/sass/layouts/_body.scss
@@ -9,6 +9,7 @@ body {
     flex-flow: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
     min-height: 100vh;
     // cursor: none; 
     overflow-x: hidden;
