nov 25, 2023. Working on the Homepage and deploying to Vercel.

--- a/sass/abstracts/_abstracts.scss
+++ b/sass/abstracts/_abstracts.scss
@@ -1,3 +1,4 @@
 @import "variables/colors";
 @import "variables/typography";
-@import "fonts/fonts"
+@import "fonts/fonts";
+@import "mixins/mixins";
