--- a/sass/layouts/_progress-bar.scss
+++ b/sass/layouts/_progress-bar.scss
@@ -57,4 +57,13 @@
             font-size: $fs-pb-s;
         }
     }
+
+    .altitude-container, .progress-icons {
+        
+        .element {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
 }
