--- a/sass/illustrations/_birds.scss
+++ b/sass/illustrations/_birds.scss
@@ -1,6 +1,6 @@
 .birds-section {
     position: relative;
-
+    max-width: unset;
     width: 100%;
 }
 
@@ -19,8 +19,8 @@
 }
 
 .bird:nth-of-type(1) {
-    left: 0rem;
-    top: 5rem;
+    left: 100%;
+    top: 10%;
 }
 
 .bird:nth-of-type(2) {
