--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -11,6 +11,8 @@ nav.navigation-bar {
     position: sticky;
     top: 0;
 
+    // z-index: 10;
+
     li {
         display: flex;
         align-items: flex-end;
