--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,4 @@
 /*HOME============================*/
-
 body {
     background-color: $background-colour;
 }
@@ -8,15 +7,129 @@ body:has(.starship-system:hover) .quote {
     opacity: 1;
 }
 
+section {
+
+    .section-title {
+        text-align: center;
+    }
+}
+
 .quote {
     opacity: 0;
     transition: all 500ms ease-in-out;
 }
 
-/*LIFT OF SECTION=================*/
+/*PROJECTS SECTION================*/
+.projects-section {
+    max-width: unset;
 
+    .section-wrapper {
+        display: flex;
+        flex-flow: column nowrap;
+        gap: 2rem;
+
+        padding: 2rem 0;
+        border-radius: 1rem;
+        background-color: $background-colour;
+
+        .section-content-wrapper {
+            display: flex;
+            flex-flow: column nowrap;
+            align-items: center;
+
+        }
+    }
+}
+/*END OF PROJECTS SECTION================*/
+
+/*ABOUT ME SECTION================*/
+.about-me-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .section-wrapper {
+        display: flex;
+        flex-flow: column nowrap;
+        gap: 2rem;
+
+        padding: 2rem;
+        border-radius: 1rem;
+        // border: 2px solid $contrast-colour;
+        max-width: 50%;
+        background-color: $background-colour;
+
+        .section-title {
+            text-align: center;
+        }
+
+        strong {
+            color: $accent-colour;
+        }
+
+        .section-name-wrapper {
+            display: flex;
+            justify-content: space-between;
+            .section-name {
+                opacity: 0.5;
+            }
+
+            .section-name.active {
+                opacity: 1;
+            }
+        }
+    }
+}
+/*END OF ABOUT ME SECTION================*/
+
+/*BIRDS SECTION=================*/
+.birds-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .birds-wrapper {
+        width: 100%;
+        height: 100%;
+    }
+}
+/*END OF BIRDS SECTION=================*/
+
+
+
+/*LIFT OFF SECTION=================*/
 .lift-off-section {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+
+    width: 100%;
+    min-width: unset;
 }
+
+.scroll-up-section {
+    background-color: $contrast-colour;
+    color: $background-colour;
+    padding: 0.25rem 0.5rem;
+    border-radius: 10rem;
+    animation: fade 8s infinite;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: max-content;
+    
+    @keyframes fade {
+        0%, 50%, 100% { opacity: 0; }
+        25%, 75% { opacity: 1; }
+    }
+
+    p {
+        font-size: $fs-pb-s;
+        font-weight: $fw-bold;
+    }
+}
+
+/*END OF LIFT OFF SECTION==========*/
