Contact Me, Launch Pad

--- a/sass/layouts/_buttons.scss
+++ b/sass/layouts/_buttons.scss
@@ -1,4 +1,4 @@
-button, .launch-project-button {
+button, .launch-project-button, #submitButton {
     border: $background-colour;
     font-weight: $fs-pb-s;
 }
