--- a/sass/illustrations/_starship.scss
+++ b/sass/illustrations/_starship.scss
@@ -9,10 +9,45 @@
     z-index: -1;
     // animation: translation 8000ms infinite;
 
-    top: 50%;
+    top: 33.5%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.starship-system.floating {
+        animation-name: floating;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+
+        @keyframes floating {
+            0% { transform: translate(-54%,  -50%); }
+            50%  { transform: translate(-46%, -48%); }
+            100%   { transform: translate(-50%, -50%); }    
+        }     
+}
+
+.starship-system.shaking {
+        animation-name: shaking;
+        animation-duration: 0.5s;
+        animation-iteration-count: infinite;
+
+    @keyframes shaking {
+        0% { transform: translate(1px, 1px) rotate(0deg); }
+        10% { transform: translate(-1px, -2px) rotate(-1deg); }
+        20% { transform: translate(-3px, 0px) rotate(1deg); }
+        30% { transform: translate(3px, 2px) rotate(0deg); }
+        40% { transform: translate(1px, -1px) rotate(1deg); }
+        50% { transform: translate(-1px, 2px) rotate(-1deg); }
+        60% { transform: translate(-3px, 1px) rotate(0deg); }
+        70% { transform: translate(3px, 1px) rotate(-1deg); }
+        80% { transform: translate(-1px, -1px) rotate(1deg); }
+        90% { transform: translate(1px, 2px) rotate(0deg); }
+        100% { transform: translate(1px, -2px) rotate(-1deg); }
+      }
+}
+
+
 
 .starship-container, .booster-container {
     width: 65px;
