Added opacity to Mute Icon. Adjusted Contact Me section alignment

--- a/style.css
+++ b/style.css
@@ -224,6 +224,7 @@ body {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  justify-content: center;
   gap: 2rem;
 }
 .contact-section .section-wrapper {
