--- a/sass/layouts/_contact-form.scss
+++ b/sass/layouts/_contact-form.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    justify-content: center;
     gap: 2rem;
 
     .section-wrapper {
