--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ nav.navigation-bar {
   padding: 2rem;
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 nav.navigation-bar li {
   display: flex;
@@ -318,9 +319,9 @@ button, .launch-project-button, #submitButton {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: center;
-  gap: 8rem;
-  padding: 1rem 4rem;
+  justify-content: start;
+  gap: 4rem;
+  padding: 1rem 20%;
   width: 100%;
   background-color: #0A0A0A;
   position: relative;
@@ -385,7 +386,7 @@ button, .launch-project-button, #submitButton {
 .project:hover {
   color: #0A0A0A;
   background-color: #EC5663;
-  padding-left: 4rem;
+  padding-left: 22%;
 }
 .project:hover .launch-project-button {
   opacity: 1;
@@ -743,6 +744,24 @@ button, .launch-project-button, #submitButton {
     transform: translate3d(-100%, 0, 0);
   }
 }
+.descending {
+  animation: descending 2000ms steps(1) infinite;
+}
+
+@keyframes descending {
+  0% {
+    transform: translate3d(-75%, 0, 0);
+  }
+  33% {
+    transform: translate3d(-50%, 0, 0);
+  }
+  66% {
+    transform: translate3d(-75%, 0, 0);
+  }
+  100% {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
 @keyframes translation {
   from {
     transform: translateY(0rem);
@@ -752,6 +771,11 @@ button, .launch-project-button, #submitButton {
   }
 }
 /*HOME============================*/
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+
 body {
   background-color: #0A0A0A;
 }
@@ -902,6 +926,79 @@ section .section-title {
 }
 
 /*END OF LIFT OFF SECTION==========*/
+:root {
+  --margin-top: 2rem;
+}
+
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+
+body.project-body {
+  position: relative;
+}
+body.project-body .starship-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  rotate: 90deg;
+  z-index: -10;
+}
+body.project-body .project-intro {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 90vh;
+}
+
+main.main-section {
+  max-width: 80%;
+  height: 200vh;
+}
+main.main-section .main-wrapper {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 6rem;
+  position: relative;
+}
+main.main-section .main-wrapper .overview {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 2rem;
+  position: sticky;
+  top: var(--margin-top);
+  left: 0;
+  margin-top: var(--margin-top);
+}
+main.main-section .main-wrapper .overview > h2 {
+  color: #EC5663;
+}
+main.main-section .main-wrapper .project-content {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 4rem;
+  max-width: 50%;
+  margin-top: var(--margin-top);
+}
+main.main-section .main-wrapper .project-content .project-content-wrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem;
+  min-height: 100vh;
+}
+main.main-section .main-wrapper .project-content .project-content-wrapper:hover > h3 {
+  color: #EC5663;
+}
+main.main-section .main-wrapper .project-content .project-content-wrapper .solution-part {
+  color: #EC5663;
+}
+main.main-section .main-wrapper .project-content .project-content-wrapper #challenges {
+  justify-content: center;
+}
+
 /*ACCESSIBILITY==================*/
 .visually-hidden {
   clip: rect(0 0 0 0);
