--- a/sass/layouts/_project.scss
+++ b/sass/layouts/_project.scss
@@ -10,10 +10,10 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    justify-content: center;
-    gap: 8rem;
+    justify-content: start;
+    gap: 4rem;
 
-    padding: 1rem 4rem;
+    padding: 1rem 20%;
     width: 100%;
 
     background-color: $background-colour;
@@ -78,6 +78,7 @@
     }
 
     .project-text-container {
+        // min-width: 50%;
         opacity: 0.5;
 
         .project-link:hover {
@@ -88,7 +89,7 @@
     &:hover {
         color: $background-colour;
         background-color: $accent-colour;
-        padding-left: 4rem;
+        padding-left: 22%;
 
         .launch-project-button {
             opacity: 1;
