--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -34,16 +34,16 @@ section {
         height: 2px;
         width: 0px;
         background-color: $contrast-colour;
-        animation: expand 4s infinite;
 
         &.expanded {
-            width: 200px;
+            width: 150px;
+            animation: expand 2s;
         }
 
         @keyframes expand {
-            0% {opacity: 1; width: 0px;}
-            45% {opacity: 1; width: 200px;}
-            80% {opacity: 1; width: 0px;}
+            0% {width: 0px;}
+            50% {width: 200px;}
+            100% {width: 150px;}
         }
     }
 }
