--- a/sass/pages/_webb-telescope.scss
+++ b/sass/pages/_webb-telescope.scss
@@ -14,7 +14,6 @@ body.project-body {
         position: fixed;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
         rotate: 90deg;
 
         z-index: -10;
@@ -25,6 +24,14 @@ body.project-body {
         align-items: center;
         justify-content: center;
         min-height: 90vh;
+
+        
+    }
+
+    .project-final-results {
+        display: flex;
+        gap: 2rem;
+        margin: 4rem;
     }
 }
 
